clusters/home-lab/cdk8s_definitions/dist/prod-media/jellyfin/jellyfin.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin-17.1.9
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/version: 10.8.13
    helm-revision: "1"
    helm.sh/chart: jellyfin-17.1.9
    release: jellyfin
    service.name: autodiscovery
  name: jellyfin-autodiscovery
  namespace: prod-media
spec:
  ports:
    - name: autodiscovery
      port: 7359
      protocol: UDP
      targetPort: 7359
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
    pod.name: main
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin-17.1.9
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/version: 10.8.13
    helm-revision: "1"
    helm.sh/chart: jellyfin-17.1.9
    release: jellyfin
    service.name: main
  name: jellyfin
  namespace: prod-media
spec:
  ports:
    - name: main
      port: 8096
      protocol: TCP
      targetPort: 8096
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
    pod.name: main
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin-17.1.9
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/version: 10.8.13
    helm-revision: "1"
    helm.sh/chart: jellyfin-17.1.9
    release: jellyfin
  name: jellyfin
  namespace: prod-media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
      pod.name: main
  strategy:
    type: Recreate
  template:
    metadata:
      annotations: {}
      labels:
        app: jellyfin-17.1.9
        app.kubernetes.io/instance: jellyfin
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: jellyfin
        app.kubernetes.io/version: 10.8.13
        helm-revision: "1"
        helm.sh/chart: jellyfin-17.1.9
        pod.lifecycle: permanent
        pod.name: main
        release: jellyfin
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: TZ
              value: UTC
            - name: UMASK
              value: "0022"
            - name: UMASK_SET
              value: "0022"
            - name: S6_READ_ONLY_ROOT
              value: "1"
            - name: JELLYFIN_PublishedServerUrl
              value: https://jellyfin.st0rmingbr4in.com
          image: docker.io/jellyfin/jellyfin:10.8.13@sha256:05a9734d7e83086b957c5b7a16cbb5a60b5bb8d113ffb953e57547359dd05140
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 8096
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: jellyfin
          ports:
            - containerPort: 7359
              name: autodiscovery
              protocol: UDP
            - containerPort: 8096
              name: main
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 8096
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 7
              memory: 2Gi
            requests:
              cpu: 3500m
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 568
            runAsNonRoot: true
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8096
            timeoutSeconds: 2
          stdin: false
          tty: false
          volumeMounts:
            - mountPath: /cache
              name: cache
              readOnly: false
            - mountPath: /config
              name: config
              readOnly: false
            - mountPath: /dev/shm
              name: devshm
              readOnly: false
            - mountPath: /media
              name: media
              readOnly: false
            - mountPath: /shared
              name: shared
              readOnly: false
            - mountPath: /tmp
              name: tmp
              readOnly: false
            - mountPath: /config/transcodes
              name: transcode
              readOnly: false
            - mountPath: /var/logs
              name: varlogs
              readOnly: false
            - mountPath: /var/run
              name: varrun
              readOnly: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      hostUsers: true
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
        sysctls: []
      serviceAccountName: default
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: jellyfin
              app.kubernetes.io/name: jellyfin
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: truecharts.org/rack
          whenUnsatisfiable: ScheduleAnyway
        - labelSelector:
            matchLabels:
              app.kubernetes.io/instance: jellyfin
              app.kubernetes.io/name: jellyfin
              pod.name: main
          maxSkew: 1
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      volumes:
        - emptyDir: {}
          name: cache
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - emptyDir:
            medium: Memory
            sizeLimit: 2Gi
          name: devshm
        - name: media
          persistentVolumeClaim:
            claimName: media-library
        - emptyDir: {}
          name: shared
        - emptyDir:
            medium: Memory
            sizeLimit: 2Gi
          name: tmp
        - emptyDir: {}
          name: transcode
        - emptyDir:
            medium: Memory
            sizeLimit: 2Gi
          name: varlogs
        - emptyDir:
            medium: Memory
            sizeLimit: 2Gi
          name: varrun
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: prod-infra-basic-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app: jellyfin-17.1.9
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/version: 10.8.13
    helm-revision: "1"
    helm.sh/chart: jellyfin-17.1.9
    release: jellyfin
  name: jellyfin
  namespace: prod-media
spec:
  rules:
    - host: jellyfin.st0rmingbr4in.com
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  number: 8096
            path: /
            pathType: Prefix
